TODO::
  DWORD => unsigned long
  DSPu_FIR => use vectors instead of pointers as an input

LAST DONE:


CHANGES:
- ver. 0.19.019 - <b>2021.03.30</b> Changed: 
  -  DSP_Fourier moved into ::DSP namespace DSP::Fourier and modernized

- ver. 0.19.018 - <b>2021.03.30</b> Changed: 
  - DSP::f::LPF_LS uses vector instead of pointer
  - PSK_SNR_estimator and PSK_SNR_estimator2 are merged into DSP::f::PSK_SNR_estimator and buffer vector is used instead of pointer

- ver. 0.19.017 - <b>2021.03.27</b> Changed: 
  - removed obsolete DSP::Clock::SchemeToMfile and related functions
  - DSP_DOT.cpp changed pointers into vectors
  - changed some pointers into vectors in other modules
  - DSP_float_vector, DSP_prec_float_vector, DSP_complex_vector => DSP::Float_vector, DSP::Prec_Float_vector, DSP::Complex_vector
  - DSP_float, DSP_prec_float, DSP_complex => DSP_Float, DSP::Prec_Float, DSP::Complex
  - several const char * => const string &
  - ReadResamplerCoef uses vector instead of pointer as an input
  - DSPu_IIR uses vectors instead of pointers as an input

- ver. 0.19.016 - <b>2021.03.19</b> Changed: Some of the #defines changed into consts and moved into DSP::c:: namespace
	-	DSP_Callback_Init => DSP::c::Callback_Init
	-	DSP_Callback_Delete => DSP::c::Callback_Delete
	-	CallbackID_mask => DSP::c::CallbackID_mask
	-	CallbackID_signal_start => DSP::c::CallbackID_signal_start
	-	CallbackID_signal_stop => DSP::c::CallbackID_signal_stop
	-	CallbackID_mask => DSP::c::CallbackID_mask
	-	FO_NoOutput => DSP::c::FO_NoOutput
	-	FO_NoInput => DSP::c::FO_NoInput
	-	FO_TheOnlyOutput => DSP::c::FO_TheOnlyOutput
	-	MaxOutputIndex => DSP::c::MaxOutputIndex
- ver. 0.19.015 - <b>2021.03.12</b> Changed: type DSPf_ExternalSleep_ptr moved into DSP namespace:  DSP::ExternalSleep_ptr
                                     Changed: moved strncmpi inside the T_WAVEchunk class
                                     Changed: moved DSPf_* functions into DSP::f:: namespace: DSP::f::*