@@ -7,8 +7,10 @@
  * 
  * \author Marek Blok 
  * \date 2006.09.23
- * \date updated 2021.01.18
+ * \date updated 2021.03.31
  */
+#include <memory>
+
 #include <DSP_lib.h>
 
 int main(int argn, char *args[])
@@ -31,17 +33,18 @@ int main(int argn, char *args[])
   }
   
   /*************************************************************/
-  DSP::Component *SoundIn = NULL;
-  DSPu_Amplifier *SoundInFactor = NULL;
-  DSPu_Const *Chirp_frequ = NULL;
-  DSPu_Accumulator *Chirp_Acum = NULL;
-  DSPu_Addition *Adder = NULL;
-  DSPu_SamplingRateConversion *Resampler_InOut = NULL;
-  DSPu_SamplingRateConversion *Resampler_OutIn = NULL;
-  DSPu_Amplifier *Factor = NULL;
-  DSPu_LoopDelay *Delay = NULL;
-  DSPu_AudioOutput *SoundOut = NULL;
-  DSPu_FILEoutput *FileOut = NULL;
+  std::map<std::string,std::shared_ptr<DSP::Component> > blocks;
+  // DSP::Component *SoundIn = NULL;
+  // DSPu_Amplifier *SoundInFactor = NULL;
+  // DSPu_Const *Chirp_frequ = NULL;
+  // DSPu_Accumulator *Chirp_Acum = NULL;
+  // DSPu_Addition *Adder = NULL;
+  // DSPu_SamplingRateConversion *Resampler_InOut = NULL;
+  // DSPu_SamplingRateConversion *Resampler_OutIn = NULL;
+  // DSPu_Amplifier *Factor = NULL;
+  // DSPu_LoopDelay *Delay = NULL;
+  // DSPu_AudioOutput *SoundOut = NULL;
+  // DSPu_FILEoutput *FileOut = NULL;
 
   /*************************************************************/
   // Log file setup  
@@ -58,40 +61,40 @@ int main(int argn, char *args[])
   switch (input_mode)
   {
     case 2: // Chirp signal
-      SoundIn = new DSPu_DDScos(MasterClock);
+      blocks["SoundIn"] = std::make_shared<DSPu_DDScos>(MasterClock);
     
-      SoundIn->Convert2Block()->SetConstInput("ampl",1.0);  //Amplitude
-      SoundIn->Convert2Block()->SetConstInput("phase",0.0); //Initial phase
+      blocks["SoundIn"]->Convert2Block()->SetConstInput("ampl",1.0);  //Amplitude
+      blocks["SoundIn"]->Convert2Block()->SetConstInput("phase",0.0); //Initial phase
         
-      Chirp_frequ = new DSPu_Const(MasterClock, DSP_M_PIx2*0.5/Fp1/2);
-      Chirp_Acum  = new DSPu_Accumulator();
+      blocks["Chirp_frequ"] = std::make_shared<DSPu_Const>(MasterClock, DSP_M_PIx2*0.5/Fp1/2);
+      blocks["Chirp_Acum"]  = std::make_shared<DSPu_Accumulator>();
       
-      Chirp_frequ->Output("out") >> Chirp_Acum->Input("in");
-      Chirp_Acum->Output("out") >>  SoundIn->Convert2Block()->Input("puls");
+      blocks["Chirp_frequ"]->Output("out") >> blocks["Chirp_Acum"]->Input("in");
+      blocks["Chirp_Acum"]->Output("out")  >> blocks["SoundIn"]->Convert2Block()->Input("puls");
       break;
       
     case 1: //Input from soundcard
-      SoundIn = new DSPu_AudioInput(MasterClock, Fp1, 1, 16);
+      blocks["SoundIn"] = std::make_shared<DSPu_AudioInput>(MasterClock, Fp1, 1, 16);
       break;
       
     case 0: //Input from file
     default:
       input_mode = 0;
       
-      SoundIn = new DSPu_WaveInput(MasterClock, "test.wav", ".", 1);
-      Fp1 = ((DSPu_WaveInput *)SoundIn->Convert2Source())->GetSamplingRate();
+      blocks["SoundIn"] = std::make_shared<DSPu_WaveInput>(MasterClock, "test.wav", ".", 1);
+      Fp1 = ((DSPu_WaveInput *)blocks["SoundIn"]->Convert2Source())->GetSamplingRate();
       
       if (Fp1 != 22050)
       {
         DSP::log << DSP::LogMode::Error << "Input wave file's sampling rate must be 22050 Sa/s" << endl;
         
-        delete SoundIn;
+        blocks["SoundIn"].reset();
         return 1;
       }
       break;
   }
   
-  SoundInFactor = new DSPu_Amplifier(sound_factor);
+  blocks["SoundInFactor"] = std::make_shared<DSPu_Amplifier>(sound_factor);
   
   /* ***************************************** */
   // Conversion from 22050 Sa/s to 8000 Sa/s
@@ -121,8 +124,8 @@ int main(int argn, char *args[])
     coef_info.Load(h_LPF_resample);
   }
    
-  Resampler_InOut = new DSPu_SamplingRateConversion(false, MasterClock, L, M, h_LPF_resample);
-  OutputClock = Resampler_InOut->GetOutputClock();
+  blocks["Resampler_InOut"] = std::make_shared<DSPu_SamplingRateConversion>(false, MasterClock, L, M, h_LPF_resample);
+  OutputClock = blocks["Resampler_InOut"]->GetOutputClock();
   
   /* ***************************************** */
   // Conversion from 8000 Sa/s to 22050 Sa/s
@@ -133,30 +136,30 @@ int main(int argn, char *args[])
       h_LPF_resample[n] /= M; 
       h_LPF_resample[n] *= L; 
   }
-  Resampler_OutIn = new DSPu_SamplingRateConversion(false, OutputClock, L, M, h_LPF_resample);
+  blocks["Resampler_OutIn"] = std::make_shared<DSPu_SamplingRateConversion>(false, OutputClock, L, M, h_LPF_resample);
   
   /*************************************************************/
   // Output to the soundcard 
-  SoundOut = new DSPu_AudioOutput(Fp2, 1, 16);
+  blocks["SoundOut"] = std::make_shared<DSPu_AudioOutput>(Fp2, 1, 16);
   // Output to the mono 16bit *.wav file 
-  FileOut  = new DSPu_FILEoutput("multirate.wav", DSP::e::SampleType::ST_short, 1, DSP::e::FileType::FT_wav, Fp2);
+  blocks["FileOut"]  = std::make_shared<DSPu_FILEoutput>("multirate.wav", DSP::e::SampleType::ST_short, 1, DSP::e::FileType::FT_wav, Fp2);
 
   /*************************************************************/
-  Adder = new DSPu_Addition(2);
-  Factor = new DSPu_Amplifier(factor);
-  Delay = new DSPu_LoopDelay(OutputClock, (int)(delay * Fp2));
+  blocks["Adder"] = std::make_shared<DSPu_Addition>(2);
+  blocks["Factor"] = std::make_shared<DSPu_Amplifier>(factor);
+  blocks["Delay"] = std::make_shared<DSPu_LoopDelay>(OutputClock, (int)(delay * Fp2));
   
   /*************************************************************/
   // Connections definitions
-  SoundIn->Output("out") >> SoundInFactor->Input("in");
-  SoundInFactor->Output("out") >> Adder->Input("real_in1");
-  Adder->Output("out") >> Resampler_InOut->Input("in");
-  Resampler_InOut->Output("out") >> SoundOut->Input("in");
-  Resampler_InOut->Output("out") >> FileOut->Input("in");
-  Resampler_InOut->Output("out") >> Factor->Input("in");
-  Factor->Output("out") >> Delay->Input("in");
-  Delay->Output("out") >> Resampler_OutIn->Input("in");
-  Resampler_OutIn->Output("out") >> Adder->Input("real_in2");
+  blocks["SoundIn"]->Output("out") >> blocks["SoundInFactor"]->Input("in");
+  blocks["SoundInFactor"]->Output("out") >> blocks["Adder"]->Input("real_in1");
+  blocks["Adder"]->Output("out") >> blocks["Resampler_InOut"]->Input("in");
+  blocks["Resampler_InOut"]->Output("out") >> blocks["SoundOut"]->Input("in");
+  blocks["Resampler_InOut"]->Output("out") >> blocks["FileOut"]->Input("in");
+  blocks["Resampler_InOut"]->Output("out") >> blocks["Factor"]->Input("in");
+  blocks["Factor"]->Output("out") >> blocks["Delay"]->Input("in");
+  blocks["Delay"]->Output("out") >> blocks["Resampler_OutIn"]->Input("in");
+  blocks["Resampler_OutIn"]->Output("out") >> blocks["Adder"]->Input("real_in2");
   
   
   /////////////////////////////////
@@ -180,7 +183,7 @@ int main(int argn, char *args[])
     
     if (input_mode == 0)
     {
-      if (((DSPu_WaveInput *)SoundIn->Convert2Source())->GetBytesRead() > 0)
+      if (((DSPu_WaveInput *)blocks["SoundIn"]->Convert2Source())->GetBytesRead() > 0)
       {
         NoOfSamplesProcessed = 0; // Play the whole file
       } 
@@ -196,19 +199,17 @@ int main(int argn, char *args[])
   
   
   /*************************************************************/
-  delete SoundIn;
-  delete SoundInFactor;
-  if (Chirp_Acum != NULL)
-    delete Chirp_Acum;
-  if (Chirp_frequ != NULL)
-    delete Chirp_frequ;
-  delete Adder;
-  delete Resampler_InOut;
-  delete Resampler_OutIn;
-  delete Factor;
-  delete Delay;
-  delete SoundOut;
-  delete FileOut;
+  blocks["SoundIn"].reset();
+  blocks["SoundInFactor"].reset();
+  blocks["Chirp_Acum"].reset();
+  blocks["Chirp_frequ"].reset();
+  blocks["Adder"].reset();
+  blocks["Resampler_InOut"].reset();
+  blocks["Resampler_OutIn"].reset();
+  blocks["Factor"].reset();
+  blocks["Delay"].reset();
+  blocks["SoundOut"].reset();
+  blocks["FileOut"].reset();
   
   /*************************************************************/
   DSP::Clock::ListOfAllComponents();
